Game Logic
I made the game Phase 10, the logic of the game is what I made here; I made Phase 10 game logic here.!,